<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarShare</string>
    <string name="login">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Routes</string>
    <string name="action_car">Car</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="radioRider">Rider</string>
    <string name="radioDriver">Driver</string>
    <string name="title_activity_route_activity">Route</string>
    <string name="startPoint">Start Location</string>
    <string name="endPoint">End Location</string>
    <string name="range">Distance Range</string>
    <string name="timeRange">Delta</string>
    <string name="passengertype">Register in this route as a:</string>
    <string name="vehicle">Vehicle</string>
    <string name="submitroute">Submit Route</string>
    <string name="Time">Hours</string>
    <string name="Date">Date</string>
</resources>
