<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="fill_parent"
android:layout_height="fill_parent">

<TextView
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:text="@string/app_name"
    style="@style/Base.TextAppearance.AppCompat.Display2"
    android:gravity="center_vertical|center_horizontal" />


<TextView
    android:layout_width="fill_parent"
    android:layout_height="30dp"
    android:text="@string/username"/>
<EditText
    android:id="@+id/EditUser"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/EditPass"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        />
<Button android:id="@+id/btnLogin"
    android:layout_width="221dp"
    android:layout_height="wrap_content"
    android:text="@string/login"
    />
</LinearLayout>